--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,15 @@
-*.class
-*.log
-
-# sbt specific
-dist/*
-target/
-lib_managed/
-src_managed/
-project/boot/
-project/plugins/project/
-
-# Scala-IDE specific
-.scala_dependencies
+*.swp
+*.swo
+.DS_Store
+.idea/
+*.iml
+atlassian-ide-*
+target
+tmp
+.history
+.project
+.classpath
+.cache
+.settings
+.metadata
+reports
