--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,11 @@
+machine:
+  environment:
+    COURSIER_PROGRESS: 0
+
 dependencies:
   cache_directories:
     - ~/.sbt
+    - ~/.coursier
 
   pre:
     - scripts/check-env-variables.sh
