--- a/circle.yml
+++ b/circle.yml
@@ -16,7 +16,7 @@ dependencies:
 
 test:
   override:
-    - sbt +test
+    - sbt +test tut
 
   post:
     - sbt coverage clean test coverageReport coverageAggregate
